force-app/main/default/objects/Prepaid_Card__c/Prepaid_Card__c.object-meta.xml
<CustomObject>
    <label>Prepaid Card</label>
    <nameField>
        <label>Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PrepaidCards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>