force-app/main/default/objects/Prepaid_Card__c/fields/Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Status__c</fullName>
    <label>Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>