force-app/main/default/objects/Prepaid_Card__c/fields/Merchant_Application__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Application</label>
    <referenceTo>Merchant_Application__c</referenceTo>
    <relationshipLabel>PrepaidCards</relationshipLabel>
    <relationshipName>PrepaidCards</relationshipName>
    <type>Lookup</type>
</CustomField>